manifests/istio-files/PotatoFactsDestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: potato-facts
spec:
  host: potato-facts-external
  subsets:
    - name: v1
      labels:
        version: v1
