manifests/istio-files/PotatoFactsVirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: potato-facts
spec:
  hosts:
    - potato-facts-external
  http:
    - route:
        - destination:
            host: potato-facts-external
            subset: v1
