manifests/istio-files/PotatoLiesDestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: potato-lies-external
spec:
  host: potato-lies-external
  subsets:
    - name: v1
      labels:
        version: v1
