manifests/istio-files/PotatoLiesVirtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: potato-lies-external
spec:
  hosts:
    - potato-lies-external
  http:
    - route:
        - destination:
            host: potato-lies-external
            subset: v1
